fix(sass): repair broken styles

--- a/sass/facade/base/_base.scss
+++ b/sass/facade/base/_base.scss
@@ -70,14 +70,6 @@ a {
   }
 }
 
-ul,
-ol,
-dl {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
 ol ol,
 ul ol {
   list-style-type: lower-roman;
