--- a/sass/facade/components/_fx.scss
+++ b/sass/facade/components/_fx.scss
@@ -42,15 +42,17 @@
 
   &-unlink,
   &.unlink {
-    color: inherit;
-    text-decoration: none;
-
-    &:visited,
-    &:visited:hover,
-    &:hover,
-    &:focus {
+    &, a {
       color: inherit;
       text-decoration: none;
+
+      &:visited,
+      &:visited:hover,
+      &:hover,
+      &:focus {
+        color: inherit;
+        text-decoration: none;
+      }
     }
   }
 }
