--- a/sass/wallace/components/_apache.scss
+++ b/sass/wallace/components/_apache.scss
@@ -1,6 +1,6 @@
 img.apache {
   border-radius: 0;
   height: 22px;
-  margin-bottom: 0;
+  margin: 0;
   min-width: max-content;
 }
