--- a/sass/wallace/layout/_nav.scss
+++ b/sass/wallace/layout/_nav.scss
@@ -27,9 +27,9 @@ nav.nav {
     padding: 0;
 
     li {
-      @extend .fx-float;
-      @extend .fx-round;
-      @extend .fx-unlink;
+      @extend .fx, .float;
+      @extend .fx, .round;
+      @extend .fx, .unlink;
 
       display: flex;
       list-style: none;
@@ -50,6 +50,7 @@ nav.nav {
       }
 
       .icon {
+        margin: 0;
         display: grid;
         grid-template-columns: 1fr;
 
@@ -88,10 +89,10 @@ nav.nav {
     }
 
     > li {
-      @extend .fx-outline;
+      @extend .fx, .outline;
 
       ul.subnav {
-        @extend .fx-tile;
+        @extend .fx, .tile;
 
         display: none;
         flex-direction: column;
